# OpenCVSample

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adjustment.cpp  gif_handler.cpp  grabcut.cpp  native-lib.cpp  utils.cpp  utils.h
app/src/main/java/cn/vansz/opencv/: GifHelper.java  JniHelper.java  OpenCVHelper.java
app/src/main/java/cn/vansz/opencv/ext/: Transform.kt
app/src/main/java/cn/vansz/opencv/ui/: BaseActivity.kt  CvSimpleActivity.kt  DetectorActivity.java  GifActivity.kt  ImageAdjustmentActivity.kt  ImageBlurActivity.kt  MainActivity.kt  OutlineActivity.kt
app/src/main/res/layout/: activity_cv_simple.xml  activity_detector.xml  activity_gif.xml  activity_image_adjustment.xml  activity_image_blur.xml  activity_main.xml  activity_outline.xml
opencvlib/: build.gradle
